syntax = "proto3";

package codenjoy;

option java_package = "com.codenjoy.dojo";
option java_multiple_files = true;

service UpdateScoreService{
    rpc updateUserScore(ScorePayload) returns (ScoreUpdateResponse);
}

message ScorePayload{
    string username = 1;
    string game = 2;
    int32 points = 3;
}

message ScoreUpdateResponse{

}